Upgrade to Gradle 7.3.1; Java 17; and upgrade libraries